--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery-task</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <p>
       <a href="./index.html">Go back</a>
     </p>
-    <p>Here will be task 1</p>
+    <ul class="gallery"></ul>
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
